[tool.poetry]
name = "location-error-computional-complexity"
version = "0.1.0"
description = ""
authors = ["Author Anonymous <author@anonymous.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.9.23"
pandas = "^2.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
